# image_processor

./: CMakeLists.txt  image_processor.cpp
header/: arg_parser.h  filter.h  image.h  reader.h  writer.h
src/: image.cpp
src/filters/: crop_filter.cpp  edge_detection_filter.cpp  gaussian_blur_filter.cpp  grayscale_filter.cpp  negative_filter.cpp  sepia_filter.cpp  sharpening_filter.cpp
src/reader/: bmp_reader.cpp
src/writer/: bmp_writer.cpp
